course page half completed

--- a/src/App.css
+++ b/src/App.css
@@ -35,3 +35,26 @@ body ,html{
 @keyframes l16 { 
   100%{transform: rotate(1turn)}
 }
+
+.swiper {
+  width: 100%;
+  height: 100%;
+}
+
+.swiper-slide {
+  text-align: center;
+  font-size: 18px;
+  background:var(--color-richblack-00);
+
+  /* Center slide text vertically */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.swiper-slide img {
+  display: block;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
